# ComputerGraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  spereworld.cpp
Resource/: ufo.mtl
Resource/texture/: city_diff.tga  horse_diff.tga  rock.tga  skybox_diff.tga
include/: CGMath.hpp  Dp.hpp  DrawableObject.hpp  ImageLoader.hpp  OBJLoader.hpp  Texture.hpp  Transform.hpp
src/: DrawableObject.cpp  Texture.cpp  Transform.cpp  main.cpp  shadow.cpp  spereworld.cpp  texture.cpp  triangle.cpp
